fix(static-files): :iphone: Prevent footer covering content
Body now acts as flex with main using flex1

--- a/home/static/css/base.css
+++ b/home/static/css/base.css
@@ -39,15 +39,19 @@ body {
     line-height: 1.5;
     background-color: var(--color-grey-light);
     color: var(--color-grey-dark);
-    min-height: 100vh;
     max-width: 100vw;
     overflow-x: hidden;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 main {
     width: 80vw;
     margin-left: 10vw;
+    margin-bottom: 5vh;
+    flex: 1;
 }
 
 footer {
@@ -56,13 +60,26 @@ footer {
     background-color: var(--color-green);
     padding: 1.5vh 1vw;
     color: var(--color-gold);
-    position: absolute;
-    bottom: 0;
     width: 100vw;
+    text-align: center;
+    font-size: small;
 
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-template-rows: 1fr;
+}
+
+footer a {
+    color: var(--color-gold);
+}
+
+footer ul {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
 footer a {
